[package]
name = "mkvhdr10plus"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generate HDR10+ dynamic metadata (Profile B) from HDR10 sources and inject it without re-encoding."

[[bin]]
name = "mkvhdr10plus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
ffmpeg-next = "8.0"
indicatif = "0.18.3"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
